Finished parsing section.

--- a/TypeCheckerGenerator/latex/Parser.tex
+++ b/TypeCheckerGenerator/latex/Parser.tex
@@ -1,4 +1,4 @@
-\section{Parsers}
+\section{Parser Combinators}
 
 \hide{
 \begin{code}%
@@ -7,7 +7,6 @@
 \AgdaKeyword{where}\<%
 \end{code}
 }
-
 \hide{
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
@@ -41,28 +40,33 @@
 \AgdaModule{Data.Bool}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{if\AgdaUnderscore{}then\AgdaUnderscore{}else\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaDatatype{Bool}\AgdaSymbol{)}\<%
+\AgdaDatatype{Bool}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{not}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Nat}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{ℕ}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaInductiveConstructor{suc}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}<ᵇ\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}<ᵇ\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∣\AgdaUnderscore{}-\AgdaUnderscore{}∣}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{String}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{trim←}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{toNat}\AgdaSymbol{)}\<%
+\AgdaFunction{toNat}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{trim←'}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Product}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Σ-syntax}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}×\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
@@ -97,7 +101,16 @@
 \AgdaSymbol{(}\AgdaDatatype{List}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaInductiveConstructor{[]}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∷\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{foldr}\AgdaSymbol{)}\<%
+\AgdaFunction{foldr}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{map}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Vec}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Vec}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∷\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -137,7 +150,6 @@
 \AgdaFunction{MaybeMonad}\<%
 \end{code}
 }
-
 \hide{
 \begin{code}%
 \>[0]\AgdaKeyword{private}\<%
@@ -161,6 +173,18 @@
 \AgdaPrimitiveType{Set}\<%
 \end{code}
 }
+
+We acknowledge that parsing is an entire field of study in its own right
+and that it is certainly not the focus of this project. However, in order
+to have the user describe the type system in our DSL rather than in Agda
+code, we will require a parser to make sense of this input.
+
+We capitalise on the definitions in the Agda standard library and define
+a parser in terms of the State monad transformer. A parser is given a string
+as input, then it may fail or it may succeed and return something along with
+the rest of the string minus what was consumed during parsing. For convenience,
+we also provide a similar type that describes a parser of a list of characters
+and a way to plumb this into a real parser by making the appropriate conversions.
 
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
@@ -215,9 +239,9 @@
 \AgdaOperator{\AgdaFunction{]→}}%
 \>[12]\AgdaBound{str}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[127I]\AgdaKeyword{do}\<%
+\>[139I]\AgdaKeyword{do}\<%
 \\
-\>[127I][@{}l@{\AgdaIndent{0}}]%
+\>[139I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{rest}\AgdaSymbol{)}\AgdaSpace{}%
@@ -234,21 +258,38 @@
 \AgdaPrimitive{fromList}\AgdaSpace{}%
 \AgdaBound{rest}\AgdaSymbol{))}\<%
 \\
-\>[.][@{}l@{}]\<[127I]%
+\>[.][@{}l@{}]\<[139I]%
 \>[18]\AgdaKeyword{where}\AgdaSpace{}%
 \AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{maybemonad}\<%
+\end{code}
+
+\hide{
+\begin{code}%
+%
+\>[2]\AgdaFunction{ParserState}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{RawMonadState}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
+\AgdaFunction{Parser}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\<%
+\>[2]\AgdaFunction{ParserState}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{StateTMonadState}\AgdaSpace{}%
+\AgdaPostulate{String}\AgdaSpace{}%
+\AgdaFunction{MaybeMonad}\<%
 \\
 %
 \>[2]\AgdaFunction{ParserMonad}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{StateTMonad}\AgdaSpace{}%
-\AgdaPostulate{String}\AgdaSpace{}%
-\AgdaFunction{MaybeMonad}\<%
+\AgdaFunction{monad}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{RawMonadState}\AgdaSpace{}%
+\AgdaFunction{ParserState}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Parser}\<%
@@ -258,14 +299,22 @@
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaModule{RawMonad}\AgdaSpace{}%
 \AgdaFunction{ParserMonad}\<%
+\\
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{parserstatemonad}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaModule{RawMonadState}\AgdaSpace{}%
+\AgdaFunction{ParserState}\<%
 \end{code}
+}
 
-
-
-
-
-Useful common parsers:
-
+We build a small library of useful parsers, allowing us to build parsers
+incrementally using these parser combinators. We provide parsers that parser
+conditionally, parse zero-or-more times. Parsers that fail if they do not
+consume all their input, parsers to parse literal characters and strings. The
+list is somewhat large so we will not detail these parsers here. A full list of
+the basic combinators used is available in appendix \ref{appendix-parsercombinators}.
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Parsers}\AgdaSpace{}%
@@ -304,9 +353,9 @@ Useful common parsers:
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{s}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[167I]\AgdaKeyword{do}\<%
+\>[192I]\AgdaKeyword{do}\<%
 \\
-\>[167I][@{}l@{\AgdaIndent{0}}]%
+\>[192I][@{}l@{\AgdaIndent{0}}]%
 \>[15]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{s'}\AgdaSymbol{)}\AgdaSpace{}%
@@ -329,7 +378,7 @@ Useful common parsers:
 \AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
 \AgdaInductiveConstructor{nothing}\<%
 \\
-\>[.][@{}l@{}]\<[167I]%
+\>[.][@{}l@{}]\<[192I]%
 \>[13]\AgdaKeyword{where}\AgdaSpace{}%
 \AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{maybemonad}\<%
@@ -371,8 +420,6 @@ Useful common parsers:
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{rest}\AgdaSymbol{)))}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
 %
 \\[\AgdaEmptyExtraSkip]%
 %
@@ -418,6 +465,155 @@ Useful common parsers:
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{str}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{consumes}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaFunction{consumes}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[274I]\AgdaKeyword{do}\<%
+\\
+\>[274I][@{}l@{\AgdaIndent{0}}]%
+\>[17]\AgdaBound{bfr}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{length}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{))}\<%
+\\
+%
+\>[17]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[17]\AgdaBound{afr}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{length}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{))}\<%
+\\
+%
+\>[17]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{∣}}\AgdaSpace{}%
+\AgdaBound{bfr}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{-}}\AgdaSpace{}%
+\AgdaBound{afr}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∣}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[274I]%
+\>[15]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaOperator{\AgdaFunction{biggest-of\AgdaUnderscore{}and\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaOperator{\AgdaFunction{biggest-of\AgdaUnderscore{}and\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaBound{p1}\AgdaSpace{}%
+\AgdaBound{p2}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaKeyword{with}\AgdaSpace{}%
+\AgdaBound{p1}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaBound{p2}\AgdaSpace{}%
+\AgdaBound{str}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[2]\AgdaSymbol{...}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a1}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{rst1}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a2}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{rst2}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
+\AgdaFunction{length}\AgdaSpace{}%
+\AgdaBound{rst1}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{<ᵇ}}\AgdaSpace{}%
+\AgdaFunction{length}\AgdaSpace{}%
+\AgdaBound{rst2}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a1}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{rst1}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a2}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{rst2}\AgdaSymbol{))}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -573,6 +769,49 @@ Useful common parsers:
 %
 \\[\AgdaEmptyExtraSkip]%
 %
+\>[2]\AgdaFunction{complete}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{complete}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[473I]\AgdaKeyword{do}\<%
+\\
+\>[473I][@{}l@{\AgdaIndent{0}}]%
+\>[17]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[17]\AgdaBound{rest}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{all}\<%
+\\
+%
+\>[17]\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
+\AgdaBound{rest}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{==ˢ}}\AgdaSpace{}%
+\AgdaString{""}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaFunction{fail}\<%
+\\
+\>[.][@{}l@{}]\<[473I]%
+\>[15]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
 \>[2]\AgdaFunction{takeIf'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSpace{}%
@@ -663,15 +902,15 @@ Useful common parsers:
 \\
 %
 \>[2]\AgdaBound{p}%
-\>[388I]\AgdaOperator{\AgdaFunction{*[}}\AgdaSpace{}%
+\>[542I]\AgdaOperator{\AgdaFunction{*[}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[394I]\AgdaKeyword{do}\<%
+\>[548I]\AgdaKeyword{do}\<%
 \\
-\>[394I][@{}l@{\AgdaIndent{0}}]%
+\>[548I][@{}l@{\AgdaIndent{0}}]%
 \>[19]\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
@@ -703,7 +942,7 @@ Useful common parsers:
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[388I]%
+\>[.][@{}l@{}]\<[542I]%
 \>[4]\AgdaKeyword{where}\AgdaSpace{}%
 \AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{parsermonad}\<%
@@ -731,7 +970,7 @@ Useful common parsers:
 \\
 %
 \>[2]\AgdaBound{p}%
-\>[431I]\AgdaOperator{\AgdaFunction{⁺[}}\AgdaSpace{}%
+\>[585I]\AgdaOperator{\AgdaFunction{⁺[}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
@@ -749,7 +988,7 @@ Useful common parsers:
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[431I]%
+\>[.][@{}l@{}]\<[585I]%
 \>[4]\AgdaKeyword{where}\AgdaSpace{}%
 \AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{parsermonad}\<%
@@ -783,10 +1022,307 @@ Useful common parsers:
 \AgdaOperator{\AgdaFunction{or}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{anyof}\AgdaSpace{}%
 \AgdaBound{ps}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{biggest-consumer}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{biggest-consumer}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{fail}\<%
+\\
+%
+\>[2]\AgdaFunction{biggest-consumer}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{ps}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{biggest-of}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{and}}\AgdaSpace{}%
+\AgdaFunction{biggest-consumer}\AgdaSpace{}%
+\AgdaBound{ps}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{all-of}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{List}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaFunction{all-of}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaCatchallClause{\AgdaFunction{all-of}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{ps}}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{str}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{foldr}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{las}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{maybe′}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{})}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{las}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{las}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaBound{ps}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaString{""}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{TERMINATING}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\\
+%
+\>[2]\AgdaFunction{how-many?}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Σ[}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaFunction{∈}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaFunction{]}\AgdaSpace{}%
+\AgdaDatatype{Vec}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaFunction{how-many?}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[699I]\AgdaOperator{\AgdaFunction{ifp}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}%
+\>[702I]\AgdaSymbol{(}\AgdaKeyword{do}\<%
+\\
+\>[702I][@{}l@{\AgdaIndent{0}}]%
+\>[30]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}%
+\>[35]\AgdaFunction{safe}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[30]\AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{how-many?}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[30]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ℕ.suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{))}\<%
+\\
+\>[.][@{}l@{}]\<[699I]%
+\>[16]\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaNumber{0}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaOperator{\AgdaFunction{max\AgdaUnderscore{}how-many?}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Σ[}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaFunction{∈}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaFunction{]}\AgdaSpace{}%
+\AgdaDatatype{Vec}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaOperator{\AgdaFunction{max}}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{how-many?}}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}}%
+\>[26]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaNumber{0}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\>[2]\AgdaOperator{\AgdaFunction{max}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}%
+\>[748I]\AgdaOperator{\AgdaFunction{how-many?}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[751I]\AgdaOperator{\AgdaFunction{ifp}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaKeyword{do}\<%
+\\
+\>[751I][@{}l@{\AgdaIndent{0}}]%
+\>[30]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}%
+\>[35]\AgdaFunction{safe}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[30]\AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{max}}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{how-many?}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[30]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ℕ.suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{))}\<%
+\\
+\>[748I][@{}l@{\AgdaIndent{0}}]%
+\>[16]\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaNumber{0}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{exactly}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Vec}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\<%
+\\
+%
+\>[2]\AgdaFunction{exactly}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{}}%
+\>[18]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{return}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\>[2]\AgdaFunction{exactly}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[798I]\AgdaKeyword{do}\<%
+\\
+\>[798I][@{}l@{\AgdaIndent{0}}]%
+\>[24]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[24]\AgdaBound{as}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{exactly}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[24]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{as}\AgdaSymbol{)}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+\>[0]\<%
 \end{code}
 
 \begin{code}%
-%
+\>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaComment{-- text/number parsing}\<%
 \\
 %
@@ -810,6 +1346,51 @@ Useful common parsers:
 %
 \\[\AgdaEmptyExtraSkip]%
 %
+\>[2]\AgdaFunction{ws+nl}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaRecord{⊤}\<%
+\\
+%
+\>[2]\AgdaFunction{ws+nl}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{tt}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaFunction{trim←'}\AgdaSpace{}%
+\AgdaBound{str}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{ws+nl!}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaRecord{⊤}\<%
+\\
+%
+\>[2]\AgdaFunction{ws+nl!}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[834I]\AgdaKeyword{do}\<%
+\\
+\>[834I][@{}l@{\AgdaIndent{0}}]%
+\>[14]\AgdaBound{c}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{takeIf}\AgdaSpace{}%
+\AgdaPrimitive{Data.Char.isSpace}\<%
+\\
+%
+\>[14]\AgdaFunction{ws+nl}\<%
+\\
+\>[834I][@{}l@{\AgdaIndent{0}}]%
+\>[13]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
 \>[2]\AgdaFunction{ws-tolerant}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Parser}\AgdaSpace{}%
@@ -822,9 +1403,9 @@ Useful common parsers:
 \>[2]\AgdaFunction{ws-tolerant}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[486I]\AgdaKeyword{do}\<%
+\>[848I]\AgdaKeyword{do}\<%
 \\
-\>[486I][@{}l@{\AgdaIndent{0}}]%
+\>[848I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaFunction{whitespace}\<%
 \\
 %
@@ -844,8 +1425,82 @@ Useful common parsers:
 \AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{parsermonad}\<%
 \\
-\>[0]\<%
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{wsnl-tolerant}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
 \\
+%
+\>[2]\AgdaFunction{wsnl-tolerant}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[862I]\AgdaKeyword{do}\<%
+\\
+\>[862I][@{}l@{\AgdaIndent{0}}]%
+\>[22]\AgdaFunction{ws+nl}\<%
+\\
+%
+\>[22]\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[22]\AgdaFunction{ws+nl}\<%
+\\
+%
+\>[22]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{r}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{wsnl-tolerant!}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{wsnl-tolerant!}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[876I]\AgdaKeyword{do}\<%
+\\
+\>[876I][@{}l@{\AgdaIndent{0}}]%
+\>[22]\AgdaFunction{ws+nl!}\<%
+\\
+%
+\>[22]\AgdaBound{r}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[22]\AgdaFunction{ws+nl!}\<%
+\\
+%
+\>[22]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{r}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 %
 \>[2]\AgdaFunction{literal'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -874,13 +1529,13 @@ Useful common parsers:
 \AgdaBound{c}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{==}}\AgdaSpace{}%
 \AgdaBound{x}%
-\>[509I]\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
+\>[899I]\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
 \AgdaInductiveConstructor{just}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{c}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{rest}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[509I]%
+\>[.][@{}l@{}]\<[899I]%
 \>[16]\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
 \AgdaInductiveConstructor{nothing}\<%
 \\
@@ -974,9 +1629,9 @@ Useful common parsers:
 \>[2]\AgdaFunction{string}\AgdaSpace{}%
 \AgdaBound{str}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[560I]\AgdaFunction{foldr}\<%
+\>[950I]\AgdaFunction{foldr}\<%
 \\
-\>[560I][@{}l@{\AgdaIndent{0}}]%
+\>[950I][@{}l@{\AgdaIndent{0}}]%
 \>[19]\AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
@@ -1031,6 +1686,27 @@ Useful common parsers:
 %
 \\[\AgdaEmptyExtraSkip]%
 %
+\>[2]\AgdaFunction{until}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaPostulate{Char}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+%
+\>[2]\AgdaFunction{until}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{stringof}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{not}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘′}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
 \>[2]\AgdaFunction{nonempty}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Parser}\AgdaSpace{}%
@@ -1043,9 +1719,9 @@ Useful common parsers:
 \>[2]\AgdaFunction{nonempty}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[602I]\AgdaKeyword{do}\<%
+\>[1005I]\AgdaKeyword{do}\<%
 \\
-\>[602I][@{}l@{\AgdaIndent{0}}]%
+\>[1005I][@{}l@{\AgdaIndent{0}}]%
 \>[17]\AgdaBound{r}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaBound{p}\<%
@@ -1080,9 +1756,9 @@ Useful common parsers:
 %
 \>[2]\AgdaFunction{nat}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[622I]\AgdaKeyword{do}\<%
+\>[1025I]\AgdaKeyword{do}\<%
 \\
-\>[622I][@{}l@{\AgdaIndent{0}}]%
+\>[1025I][@{}l@{\AgdaIndent{0}}]%
 \>[10]\AgdaBound{d}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
 \AgdaFunction{nonempty}\AgdaSpace{}%
@@ -1094,7 +1770,7 @@ Useful common parsers:
 \AgdaSymbol{(}\AgdaFunction{toNat}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[622I]%
+\>[.][@{}l@{}]\<[1025I]%
 \>[8]\AgdaKeyword{where}\AgdaSpace{}%
 \AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{parsermonad}\<%
@@ -1116,21 +1792,122 @@ Useful common parsers:
 \>[2]\AgdaFunction{bracketed}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[639I]\AgdaKeyword{do}\<%
+\>[1042I]\AgdaKeyword{do}\<%
 \\
-\>[639I][@{}l@{\AgdaIndent{0}}]%
+\>[1042I][@{}l@{\AgdaIndent{0}}]%
 \>[18]\AgdaFunction{literal}\AgdaSpace{}%
 \AgdaString{'('}\<%
 \\
 %
 \>[18]\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
-\AgdaFunction{ws-tolerant}\AgdaSpace{}%
+\AgdaFunction{wsnl-tolerant}\AgdaSpace{}%
 \AgdaBound{p}\<%
 \\
 %
 \>[18]\AgdaFunction{literal}\AgdaSpace{}%
 \AgdaString{')'}\<%
+\\
+%
+\>[18]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{a}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[5]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{potentially-bracketed}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{potentially-bracketed}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{either}}\AgdaSpace{}%
+\AgdaFunction{bracketed}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{or}}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{curlybracketed}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{curlybracketed}%
+\>[1070I]\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaKeyword{do}\<%
+\\
+\>[1070I][@{}l@{\AgdaIndent{0}}]%
+\>[18]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaString{'\{'}\<%
+\\
+%
+\>[18]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{wsnl-tolerant}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[18]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaString{'\}'}\<%
+\\
+%
+\>[18]\AgdaFunction{return}\AgdaSpace{}%
+\AgdaBound{a}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{where}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{parsermonad}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{squarebracketed}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Parser}\AgdaSpace{}%
+\AgdaGeneralizable{A}\<%
+\\
+%
+\>[2]\AgdaFunction{squarebracketed}%
+\>[1087I]\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaKeyword{do}\<%
+\\
+\>[.][@{}l@{}]\<[1087I]%
+\>[18]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaString{'['}\<%
+\\
+%
+\>[18]\AgdaBound{a}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{←}}\AgdaSpace{}%
+\AgdaFunction{wsnl-tolerant}\AgdaSpace{}%
+\AgdaBound{p}\<%
+\\
+%
+\>[18]\AgdaFunction{literal}\AgdaSpace{}%
+\AgdaString{']'}\<%
 \\
 %
 \>[18]\AgdaFunction{return}\AgdaSpace{}%
@@ -1144,3 +1921,4 @@ Useful common parsers:
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Parsers}\<%
 \end{code}
+}
